<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent"
                                                       android:layout_marginStart="16dp"
                                                       android:layout_marginEnd="16dp">


        <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textSize="40sp"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"/>


        <TextView
                android:id="@+id/label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/label_first_fragment"
                app:layout_constraintTop_toBottomOf="@+id/number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"/>


        <TextView
                android:id="@+id/exercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_first_exercise"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/label"
                app:layout_constraintEnd_toEndOf="@+id/label"
                android:layout_marginTop="30dp"/>

        <EditText
                android:id="@+id/edittext_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="text"
                android:hint="@string/type_something_here"
                app:layout_constraintTop_toBottomOf="@+id/exercise"
                app:layout_constraintStart_toStartOf="@+id/exercise"
                app:layout_constraintEnd_toEndOf="@+id/exercise"/>


        <Button
                android:id="@+id/btn_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:background="@android:color/holo_green_dark"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>