<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent"
                                                       android:layout_marginStart="16dp"
                                                       android:layout_marginEnd="16dp">


        <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:textSize="40sp"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"/>


        <TextView
                android:id="@+id/label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/fragment_second_label"
                app:layout_constraintTop_toBottomOf="@+id/number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"/>


        <TextView
                android:id="@+id/argument_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/argument"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/label"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:id="@+id/txt_argument_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/argument_label"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="1234455"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp"/>


        <TextView
                android:id="@+id/exercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_fragment_exercise"
                app:layout_constraintTop_toBottomOf="@+id/txt_argument_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="30dp"/>


        <Button
                android:id="@+id/btn_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:background="@android:color/holo_green_dark"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"/>

        <ImageView
                android:id="@+id/image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:transitionName="imageView"
                tools:background="@drawable/jetpack"
                app:layout_constraintTop_toBottomOf="@+id/exercise"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>